Content alignment fixes

--- a/src/assets/css/base/image.css
+++ b/src/assets/css/base/image.css
@@ -6,3 +6,10 @@ img {
 	overflow: hidden;
 	vertical-align: middle;
 }
+
+video {
+	display: block;
+	height: auto;
+	max-width: 100%;
+	width: 100%;
+}
