--- a/src/assets/css/components/card.css
+++ b/src/assets/css/components/card.css
@@ -40,8 +40,8 @@
 
 .card__heading {
 	font-size: var(--step-2);
-	margin-bottom: 1rem;
-	margin-top: 0;
+	margin-block: 0;
+	margin-inline: 0 1rem;
 }
 
 .card__link {
