--- a/src/assets/css/layouts/single.css
+++ b/src/assets/css/layouts/single.css
@@ -11,8 +11,8 @@
 }
 
 .single__heading {
-	margin-bottom: 0.25em;
-	margin-top: 0;
+	margin-block: 0 0.25em;
+	margin-inline: 0;
 }
 
 .single__date {
